# rust_whispers

./: .gitignore  Cargo.toml  transkrip.srt  tutorial.txt
src/: extractor.rs  gemini.rs  main.rs  open_ai_client.rs  style_template.ass
