[package]
name = "whisper"
version = "0.1.0"
edition = "2024"

[dependencies]
whisper-rs = { version = "0.10.0", features = [] }
whisper-rs-sys = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
hound = "3.5.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
